# MIPS-R3000-CPU-Simulator

./: .gitignore  CMP.cpp  CMP.hpp  CMakeLists.txt  Context.cpp  Context.h  ExecutionEngine.cpp  ExecutionEngine.h  IFEngine.cpp  IFEngine.h  Instruction.cpp  Instruction.h  MemCache.cpp  MemCache.hpp  Phase.cpp  Phase.h  README.md  RawBinary.cpp  RawBinary.h  Task.cpp  Task.h  Types.cpp  Types.h  Utils.cpp  Utils.h  main.cpp
adts/: BlockingQueue.h  FlipFlop.h  RawBufferHandle.cpp  RawBufferHandle.h  ScopedReadWriteLock.cpp  ScopedReadWriteLock.h  SizedBlockingQueue.cpp  SizedBlockingQueue.h
engines/: IDEngine.cpp  IDEngine.h  IFEngine.cpp  IFEngine.h
misc/: Log.cpp  Log.h
tasks/: FirstClassTasks.cpp  FirstClassTasks.h  FragmentTasksI.cpp  FragmentTasksI.h  FragmentTasksJ.cpp  FragmentTasksJ.h  FragmentTasksR.cpp  FragmentTasksR.h  ITasks.cpp  ITasks.h  InstructionMap.cpp  JTasks.cpp  JTasks.h  RTasks.cpp  RTasks.h  Task.cpp  Task.h  TaskHandle.cpp  TaskHandle.h  Tasks.cpp
tests/: TestAdts.h  TestCase.h  TestError.h  TestExecutionEngine.h  TestInstruction.h  TestMain.cpp  TestTasks.h  TestTasksError.h  TestTypes.h  TestUtils.h
tests/test_dataset/branch/: branch.S  branch.c
tests/test_dataset/error1/: error_1.S  error_dump.rpt  snapshot.rpt
tests/test_dataset/fib_dp/: fib_dp.S  fib_dp.c
tests/test_dataset/func/: func.c
tests/test_dataset/multiply/: snapshot.rpt
tests/test_dataset/pipeline/bubble_sort/: bubble_sort.c  bubble_sort.txt
tests/test_dataset/pipeline/divide/: divide.c  divide.txt  snapshot.rpt
tests/test_dataset/pipeline/error_3/: error_3.S
tests/test_dataset/pipeline/fib_r/: fib_r.c  fib_r.txt  ls  snapshot.rpt
tests/test_dataset/pipeline/pipeline1/: pipeline1.S
tests/test_dataset/pipeline/pipeline2/: pipeline2.S
tests/test_dataset/pipeline/pipeline3/: pipeline3.S
tests/test_dataset/pipeline/pipeline4/: pipeline4.S  snapshot.rpt
tests/test_dataset/pipeline/pipeline5/: pipeline5.S  snapshot.rpt
tests/test_dataset/recur/: recur.S  recur.cpp
tests/test_dataset/seq/: seq.S  snapshot.rpt
utils/: RawBufferHandle.cpp  RawBufferHandle.h
